--- a/CMRframework/pom.xml
+++ b/CMRframework/pom.xml
@@ -109,7 +109,7 @@
 
 	  </profile>
 	  	   <profile>
-		  <id>RRT</id>
+		  <id>ST</id>
 		  
 	<build>
 		<plugins>
@@ -122,7 +122,7 @@
 				<configuration>
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
-						<suiteXmlFile>suite_reginalregressionTest.xml</suiteXmlFile>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
